# indus-dragon

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Readme.md  log.md  todo.txt
networks_training/: export_to_header.py  train.py
src/: chess.hpp  constants.hpp  engine.cpp  engine.hpp  evaluation.cpp  evaluation.hpp  heuristics.hpp  main.cpp  nnue.cpp  nnue.hpp  nnue_data.hpp  search.cpp  search.hpp  time_manager.cpp  time_manager.hpp  tt.cpp  tt.hpp  uci.cpp  uci.hpp  utils.hpp
src/engine/: constants.hpp  engine.cpp  engine.hpp  evaluation.cpp  heuristics.hpp  piece-maps.hpp  search.cpp  time_manager.hpp  tt.cpp  tt.hpp  utils.hpp
